# myhouse

./: .gitignore  ai-architecture-discussion-export.md
py/: _add_excel.py  _add_fn.py  _add_method.py  _clean_py.py  _fix_dayanalysis.py  _fix_fn.py  _fix_pass.py  _fix_rules.py  _labels.json  ai_assistant.py  ai_care.py  ai_knowledge.py  ai_service.py  alembic.ini  api_server.py  attendance.py  business_rules.md  calendar_2026.py  car_db.py  car_tab.py  config.py  database.py  final_merge.py  fix_api2.py  fix_empno.py  fix_init.py  fix_stream1.py  fix_stream2.py  fun_features.py  fun_tab.py  kb_tab.py  knowledge_base.py  local_db.py  login_page.py  main.py  main_flet.py  mood_engine.py  mysql_backup.py  ot_reason.py  overtime_notes_tab.py  (+21 more)
py/app/: __init__.py  main.py
py/app/business_knowledge/: bills.md  contracts.md  exceptions.md  meters.md
py/app/core/: access_auth.py  config.py
py/app/db/: database.py
py/app/models/: __init__.py
py/app/repositories/: local_repository.py
py/app/routers/: health.py  misc.py  rental.py  user.py
py/app/schemas/: rental.py
py/app/services/: ai_chat.py  ai_context.py  ai_memory.py  ai_orchestrator.py  ai_state_store.py  business_knowledge.py  rental_dispatcher.py  skill_executor.py  skill_registry.py  skill_vector_store.py
py/migrations/: README.md  env.py
py/skills/attendance/: SKILL.md
py/skills/car-abnormal/: SKILL.md
py/skills/overtime-stats/: SKILL.md
py/tests/: ai_eval_cases.json  test_ai_assistant_profile.py  test_ai_contract_orchestration.py  test_ai_suggested_actions.py  test_family_auth.py
(+87 files in other folders)
